# MME

./: CMakeLists.txt  CMakePresets.json  README.md  Roadmap.md  build.bat  clean_cache.bat  compiler_error_latest.md  debug.txt  diff_map_display.patch  run.ps1  scratch_mouse_events.cpp  temp_brush.cpp  temp_drawer.cpp  temp_map_display.cpp  temp_map_display_utf8.cpp  update.ps1  vcpkg.json  windows_compiler.bat
MapEditor/: MapEditor.sln
MapEditor/Probe/: Program.cs
MapEditor/src/MapEditor.App/: IntegrationTest.cs  MapEditor.App.csproj  Program.cs
MapEditor/src/MapEditor.Assets/: MapEditor.Assets.csproj
MapEditor/src/MapEditor.Assets/Atlas/: TextureAtlas.cs  TextureAtlasGenerator.cs
MapEditor/src/MapEditor.Assets/Dat/: DatDatabase.cs  DatObjectInfo.cs  DatParser.cs
MapEditor/src/MapEditor.Assets/Otbm/: MapValidator.cs  OtbmExporter.cs  OtbmImporter.cs  OtbmNodeReader.cs
MapEditor/src/MapEditor.Assets/Spr/: SprDatabase.cs  SprParser.cs
MapEditor/src/MapEditor.Core/: MapEditor.Core.csproj
MapEditor/src/MapEditor.Core/Actions/: EditorActions.cs
MapEditor/src/MapEditor.Core/Config/: AppSettings.cs  SettingsManager.cs
MapEditor/src/MapEditor.Core/Map/: MapDocument.cs  MapLayer.cs  Position.cs  Tile.cs  ToolManager.cs
MapEditor/src/MapEditor.Core/State/: EditorState.cs  EditorStore.cs  MapSerializer.cs  RootReducer.cs
MapEditor/src/MapEditor.Rendering/: MapEditor.Rendering.csproj
MapEditor/src/MapEditor.Rendering/Camera/: Camera.cs
MapEditor/src/MapEditor.Rendering/Renderer/: MapRenderer.cs  ViewportFbo.cs
MapEditor/src/MapEditor.Rendering/Shaders/: tile.frag  tile.vert
MapEditor/src/MapEditor.Rendering/Textures/: IconLoader.cs  TextureManager.cs
MapEditor/src/MapEditor.UI/: AssetManager.cs  DockingManager.cs  MapEditor.UI.csproj  ToolbarIcons.cs  UiRoot.cs
MapEditor/src/MapEditor.UI/Widgets/: MainMenuBar.cs  MainToolbar.cs  ToolbarFactory.cs
MapEditor/src/MapEditor.UI/Windows/: MapViewportWindow.cs  PaletteView.cs  PaletteViewModel.cs  SettingsWindow.cs  TerrainPaletteWindow.cs
cmake/: vcpkg-toolchain.cmake
data/: menubar.xml
data/1320/: tilesets.xml
data/shaders/: blur.glsl  composition.glsl  crt.glsl  gi_raytrace.glsl  map_fragment.glsl  map_fragment_vk.glsl  map_fragment_vk.glsl.spv  map_vertex.glsl  map_vertex_vk.glsl  map_vertex_vk.glsl.spv.spv  tile.frag  tile.vert
extensions/: lighting_wizard.lua  nature_scatter.lua  room_clutter.lua  shop_gen.lua
scripts/: all_items_placer.lua  fps_counter.lua  lasso_tool.lua  prefab_manager.lua  prefab_tool.lua
source/: CMakeLists.txt  about_window.cpp  action.h  application.cpp  application.h  async_loader.cpp  async_loader.h  basemap.cpp  basemap.h  brush.cpp  brush.h  camera.h  canvas_minimap.cpp  carpet_brush.cpp  clean_project.bat  client_version.cpp  client_version.h  common_windows.cpp  common_windows.h  copybuffer.cpp  copybuffer.h  core_forward.h  creature.h  deferred_renderer.cpp  deferred_renderer.h  definitions.h  doodad_brush.cpp  doodad_brush.h  drawer_blit.cpp  drawer_blit.cpp.stub  drawer_core.cpp  drawer_core.cpp.stub  drawer_overlay.cpp  drawer_overlay.cpp.stub  ecs_manager.h  editor.cpp  editor.h  editor_actions.cpp  editor_interfaces.h  editor_io.cpp  (+127 more)
source/lua/: lua_api.h  lua_api_algo.cpp  lua_api_app.cpp  lua_api_creature.cpp  lua_api_http.cpp  lua_api_item.cpp  lua_api_map.cpp  lua_api_prefab.cpp  lua_api_tile.cpp  lua_script_manager.cpp  lua_script_manager.cpp.new
